--- a/frontend/templates/admin/house/form.html
+++ b/frontend/templates/admin/house/form.html
@@ -43,28 +43,18 @@
                         <div class="col-md-6">
 
                             <div class="form-group form-md-line-input form-md-floating-label">
-                                <input ng-model="license_plate" type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Número de placa</label>
+                                <input ng-model="house_number" type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Número de casa</label>
                             </div>
-                            <div class="form-group form-md-line-input form-md-floating-label has-info">
-                              <select name="repeatSelect" class="form-control" ng-model="brand"  ng-options="brand.name for brand in brands.data | orderBy: 'name' track by brand.id" required>
-                                    <option value=""></option>
-                              </select>
-                              <label for="form_control_1">Marca</label>
-                            </div>
+
                         </div>
                         <div class="col-md-6">
-                            <div class="form-group form-md-line-input form-md-floating-label has-info">
-                                <button ng-model="vehicule_color"class="jscolor {valueElement:null,value:'ffff'} btn btn-default" style="width:100%">
-                                Color del vehículo
-                            </button>
+
+                            <div class="form-group form-md-line-input form-md-floating-label">
+                                <input ng-model="extension" type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Extensión</label>
                             </div>
-                            <div class="form-group form-md-line-input form-md-floating-label has-info">
-                              <select name="repeatSelect" class="form-control" ng-model="house"  ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
-                                  <option value=""></option>
-                              </select>
-                              <label for="form_control_1">Número de casa</label>
-                            </div>
+
                         </div>
                         <div class="form-actions noborder">
                             <h3 class="text-right">
