--- a/frontend/templates/admin/resident/new_resident.html
+++ b/frontend/templates/admin/resident/new_resident.html
@@ -1,4 +1,5 @@
 <!-- SE REQUIERE EN CADA VISTA -->
+
 <div class="page-bar route-title">
     <ul class="page-breadcrumb">
         <li>
@@ -47,50 +48,57 @@
                         <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new">Subir imagen</label></h3>
                         <input type='file' id="imgInp"/>
 
-                        <div class="col-md-6">
+                        <div class="col-md-6 marging-top-20" >
 
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input  ng-model="name" type="text" class="form-control" id="form_control_1" required title="Input required">
+                          <div class="form-group form-md-line-input">
+                            <input ng-model="name" type="text" class="form-control" id="form_control_1" >
+                            <label for="form_control_1" class="font-15">Nombre</label>
+                          </div>
+
+                            <!-- <div class="form-group form-md-line-input form-md-floating-label">
+                                <input   type="text" class="form-control" id="form_control_1" required title="Input required">
                                 <label for="form_control_1">Nombre</label>
+                            </div> -->
+
+                            <div class="form-group form-md-line-input">
+                              <input ng-model="last_name" type="text" class="form-control" id="form_control_1" >
+                              <label for="form_control_1" class="font-15">Primer Apellido</label>
                             </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input ng-model="last_name" type="text" class="form-control" id="form_control_1" required title="Input required">
-                                <label for="form_control_1">Primer Apellido</label>
+                            <div class="form-group form-md-line-input">
+                              <input ng-model="second_last_name" type="text" class="form-control" id="form_control_1" >
+                              <label for="form_control_1" class="font-15">Segundo Apellido</label>
                             </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input ng-model="second_last_name" type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Segundo Apellido</label>
+                            <div class="form-group form-md-line-input">
+                              <input ng-model="identification_number" type="text" class="form-control" id="form_control_1" >
+                              <label for="form_control_1" class="font-15">Número de cédula</label>
                             </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input ng-model="identification_number" type="text" class="form-control" id="form_control_1" required title="Input required">
-                                <label for="form_control_1">Cédula</label>
-                            </div>
+
 
                         </div>
 
-                        <div class="col-md-6">
-                          <div class="form-group form-md-line-input form-md-floating-label">
+                        <div class="col-md-6 marging-top-20">
+                          <div class="form-group form-md-line-input">
+                            <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" placeholder="Ingresa una fecha">
+                            <label for="form_control_1">Fecha de nacimiento</label>
+                          </div>
+
+                          <!-- <div class="form-group form-md-line-input form-md-floating-label">
                               <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" required title="Input required">
                               <label for="form_control_2">Fecha de nacimiento</label>
-                          </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input ng-focus="expression==1" ng-model="phone_number" type="text" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Número celular</label>
-                                <span class="help-block">(Opcional)</span>
-                            </div>
-                            <div class="form-group form-md-line-input form-md-floating-label">
-                                <input ng-model="email" type="email" class="form-control" id="form_control_1">
-                                <label for="form_control_1">Correo electrónico</label>
-                                <span class="help-block">(Opcional)</span>
-                            </div>
-                            <div  class="form-group form-md-line-input form-md-floating-label has-info">
-                                <!-- <select ng-model="house_id" >
-                                      <option ng-repeat="house in houses">{{house.house_number}}</option>
-                                  </select> -->
-                                  <select ng-model="house_id"  class="form-control" id="form_control_1">
-                                      <option ng-repeat="house in houses" value="{{house.house_number}}">{{house.house_number}}</option>
-                                  </select>
+                          </div> -->
 
+                            <div class="form-group form-md-line-input">
+                                <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="Ingresa una número" class="form-control" id="form_control_1">
+                                <label for="form_control_1">Número celular</label>
+                            </div>
+                            <div class="form-group form-md-line-input ">
+                                <input ng-model="email" type="email" class="form-control" placeholder="Ingresa una correo" id="form_control_1">
+                                <label for="form_control_1">Correo electrónico</label>
+                            </div>
+                            <div  class="form-group form-md-line-input has-info">
+
+                                  <select name="repeatSelect" class="form-control" ng-model="house"  ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+                                  </select>
                                 <label for="form_control_1">Número de casa</label >
                             </div>
 
