--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -72,6 +72,8 @@
 <script src="../../assets/global/scripts/app.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/residentController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/houseController.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/vehiculeController.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/officerController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/bootbox.min.js" type="text/javascript"></script>
 
 <!-- <script src="../../templates/admin/app.js" type="text/javascript"></script>
