--- a/frontend/templates/admin/vehicule/index.html
+++ b/frontend/templates/admin/vehicule/index.html
@@ -8,7 +8,7 @@
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
-            <a href="#">Casas</a>
+            <a href="#">Vehículos</a>
             <i class="fa fa-angle-right"></i>
         </li>
         <li>
@@ -25,25 +25,27 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-                  <h3 class="page-title col-md-10">	Casas </h3>
+                  <h3 class="page-title col-md-10">	Vehículos </h3>
                       <input type="text" name="name" value="" ng-model="search" placeholder="Buscar residente" class="search-bar col-md-2">
       						<div class="portlet-body ">
       							<div class="table-scrollable ">
       								<table class="table table-striped table-hover font-12">
       								<thead>
       								<tr>
-      									<th>Número</th>
-      							    <th>Extención</th>
+      									<th>Placa</th>
+      							    <th>Marca</th>
+                        <th>Número de casa</th>
                         <th>Editar</th>
                         <th>Eliminar</th>
       								</tr>
       								</thead>
       								<tbody>
-                        <tr ng-repeat="house in houses | filter:search | orderBy:'name'" >
-                           <td>{{house.house_number}}</td>
-                            <td>{{house.extension}}</td>
-                           <td> <a ui-sref="editHouse({id:house.id})">Editar</a></td>
-                           <td> <a ng-click="deleteHouse(house.id)">Eliminar</a></td>
+                        <tr ng-repeat="vehicule in vehicules | filter:search | orderBy:'name'" >
+                            <td>{{vehicule.license_plate}}</td>
+                            <td>{{vehicule.brand}}</td>
+                            <td>{{vehicule.house_id}}</td>
+                           <td> <a ui-sref="editVehicule({id:vehicule.id})">Editar</a></td>
+                           <td> <a ng-click="deleteVehicule(vehicule.id)">Eliminar</a></td>
                          </tr>
       								</tbody>
       								</table>
