--- a/frontend/assets/global/css/main.css
+++ b/frontend/assets/global/css/main.css
@@ -7,6 +7,10 @@
     width: 100%;
 }
 
+.gray-background{
+  background-color: #364150 !important;
+}
+
 body {
     background-color: white !important;
 }
