--- a/frontend/templates/Login/forgot_password.html
+++ b/frontend/templates/Login/forgot_password.html
@@ -1,11 +1,70 @@
-<div class="blue-background">
-<h2 class="text-center no-margin big-padding-top"><img src="assets/images/logo.png" alt="" height="60px"/></h2>
-    <h2 class="text-center"> Skill Matrix</h2>
-   <div class="absolute-center is-responsive"  id="login-form">
-     <form ng-submit="requestPasswordReset(passwordResetForm)" role="form" ng-init="passwordResetForm  = {}">
-        <h4 class="text-center">Forgot your password?</h4>
-            <input type="email" name="email" placeholder="Email" value="" class="login-input text-center" ng-model="passwordResetForm.email">
-            <button type="submit" name="name" id="login-button" >Request password reset</button>
-     </form>
-   </div>
+<div class="col-md-12 no-margin no-padding bg-peace">
+    <div class="col-md-6 col-sm-12">
+        <div class=" medium-padding">
+            <h1>Shield Login</h1>
+            <br>
+            <h4>¿Olvidaste tu contraseña?</h4>
+            <p>
+            Digita tu correo elecrónico registrado  y se le enviará un correo con las intrucciones para recuperar su contraseña.
+            </p>
+             <form ng-submit="requestPasswordReset(passwordResetForm)" enabled role="form" ng-init="passwordResetForm  = {}">
+                <div class="col-md-12 col-sm-12">
+                    <div class="form-group form-md-line-input small-margin-top ">
+                        <input ng-model="passwordResetForm.email" type="text" class="form-control input-sm" id="form_control_1" placeholder="Correo electronico">
+                    </div>
+                </div>
+            <button  ng-click='backTologin()' class="btn invert-blue col-md-2 col-sm-1 col-xs-1" name="button">Atrás</button>
+            <button  type="submit" class="btn blue col-lg-offset-2 col-md-4 col-sm-4 col-xs-12  float-right" name="button">Recuperar contraseña</button>
+          </form>
+        </div>
+        <div class="login-hide-2 col-md-12 col-sm-12 hidden-sm hidden-xs">
+        </div>
+        <div class="col-md-12 ">
+            <div class="login-options col-md-5 col-sm-4 col-xs-6">
+                <ul class="social-icons">
+                    <li>
+                        <a class="facebook" data-original-title="facebook" href="javascript:;">
+                        </a>
+                    </li>
+                    <li>
+                        <a class="twitter" data-original-title="Twitter" href="javascript:;">
+                        </a>
+                    </li>
+                    <li>
+                        <a class="linkedin" data-original-title="Linkedin" href="javascript:;">
+                        </a>
+                    </li>
+                </ul>
+
+            </div>
+            <div class="col-md-7 col-sm-7 col-xs-6">
+                <h5 class="text-right"> 2016 &copy; Lighthouse</h5>
+            </div>
+
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12 no-padding no-margin">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" hidden="true">
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="http://keenthemes.com/preview/metronic/theme/assets/pages/img/login/bg1.jpg" alt="Chania">
+                </div>
+
+                <div class="item">
+                    <img src="http://keenthemes.com/preview/metronic/theme/assets/pages/img/login/bg3.jpg" alt="Chania">
+                </div>
+            </div>
+            <!-- Left and right controls -->
+        </div>
+    </div>
 </div>
+
+<script type="text/javascript">
+    $(function() {
+        $('.carousel').fadeIn("slow");
+        $('.carousel').carousel({
+            intervals: 2500
+        });
+    });
+</script>
