--- a/frontend/templates/Login/change_password.html
+++ b/frontend/templates/Login/change_password.html
@@ -1,12 +1,26 @@
 <div class="blue-background">
-<h2 class="text-center no-margin big-padding-top"><img src="assets/images/logo.png" alt="" height="60px"/></h2>
-    <h2 class="text-center"> Skill Matrix</h2>
-   <div class="absolute-center is-responsive"  id="login-form">
-     <form ng-submit="updatePassword(changePasswordForm)" role="form" ng-init="changePasswordForm = {}" name="login">
-        <h4 class="text-center">Change your password</h4>
-            <input type="password" name="password" placeholder="Password" value="" class="login-input text-center" ng-model="changePasswordForm.password">
-            <input type="password" name="password" placeholder="Password Confirmation" value="" class="login-input text-center" ng-model="changePasswordForm.password_confirmation">
-            <button type="submit" name="name" id="login-button" >Change your password</button>
-     </form>
-   </div>
+    <h2 class="text-center no-margin big-padding-top"><img src="assets/images/logo.png" alt="" height="60px"/></h2>
+    <h2 class="text-center">Bienvenido a shield</h2>
+    <div class="huge-margin-top" id="login-form">
+        <form ng-submit="updatePassword(changePasswordForm)" role="form" ng-init="changePasswordForm = {}" name="login">
+            <h4 class="text-center">Por favor cambia tu contraseña</h4>
+            <h5 class="text-center">¡No la olvides!<h5>
+   <h1 class="text-center">
+            <div class="col-md-12 col-sm-6">
+                <div class="form-group form-md-line-input small-margin-top ">
+                    <input ng-model="changePasswordForm.password" type="password" class="form-control text-center" id="form_control_1" placeholder="" required title="Input required">
+                    <label for="form_control_1">Nueva contraseña</label>
+                </div>
+            </div>
+            <div class="col-md-12 col-sm-6">
+                <div class="form-group form-md-line-input small-margin-top ">
+                    <input ng-model="changePasswordForm.password_confirmation" type="password" class="form-control text-center" id="form_control_1" placeholder="" required title="Input required">
+                    <label for="form_control_1">Confirma tu contraseña</label>
+                </div>
+            </div>
+            <button type="submit" name="name" id="login-button" class="btn blue">Cambiar contraseña</button>
+              </h1>
+              <h5 class="text-center small-margin-top">Si en algun momento la olvidas, puedes recuperarla desde la pagina de inicio de sesión</h5>
+        </form>
+    </div>
 </div>
