--- a/frontend/templates/Login/login.html
+++ b/frontend/templates/Login/login.html
@@ -9,7 +9,7 @@
             <p>
                 Lorem ipsum dolor sit amet, coectetuer adipiscing elit sed diam nonummy et nibh euismod aliquam erat volutpat. Lorem ipsum dolor sit amet, coectetuer adipiscing.
             </p>
-             <form ng-submit="submitLogin(loginForm)" role="form" ng-init="loginForm = {}" name="login">
+             <form ng-submit="submitLogin(loginForm)" role="form" ng-init="loginForm = {}" name="login" ng-show='!isResetingPassword'>
             <div class="huge-margin-top">
                 <div class="col-md-6 col-sm-6">
                     <div class="form-group form-md-line-input small-margin-top ">
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <h5 class="text-center"><a href="#" class="col-md-8 col-sm-8 col-xs-12 small-margin-bottom">¿Olvidaste tu contraseña?</a></h5>
+            <h5 class="text-center"><a href="#" class="col-md-8 col-sm-8 col-xs-12 small-margin-bottom" ng-click='requestPassword()'>¿Olvidaste tu contraseña?</a></h5>
             <br>
             <button  type="submit" class="btn blue col-md-4 col-sm-4 col-xs-12" name="button">Iniciar sesión</button>
           </form>
