--- a/frontend/templates/admin/header.html
+++ b/frontend/templates/admin/header.html
@@ -150,7 +150,7 @@
 									<i class="icon-lock"></i> Lock Screen </a>
 							</li>
 							<li>
-								<a href="login.html">
+								<a ng-click="signOut()">
 									<i class="icon-key"></i> Log Out </a>
 							</li>
 						</ul>
@@ -176,7 +176,7 @@
 	</div>
 	<div class="page-container">
 	</div>
-	
+
 	<!-- BEGIN CONTAINER -->
 
 		<!-- BEGIN SIDEBAR -->
