--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -17,6 +17,7 @@
 	<link href="../../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="../../assets/global/plugins/bootstrap-toastr/toastr.min.css" media="screen" title="no title">
 	<!-- END GLOBAL MANDATORY STYLES -->
 	<!-- BEGIN THEME STYLES -->
 
@@ -37,7 +38,7 @@
 <div ui-view="login"></div>
 <div ui-view="access"></div>
 <div class="gray">
-	<div id="rightView" ng-hide="$state.current.name == 'login' || $state.current.name == 'access' ">
+	<div id="rightView" ng-hide="$state.current.name == 'login' || $state.current.name == 'access' || $state.current.name == 'changePassword'  || $state.current.name == 'requestPassword' ">
 		<div ui-view="header" class="page-header-fixed page-quick-sidebar-over-content">
 		</div>
 		<div class="page-container">586+9
@@ -66,6 +67,7 @@
 <script src="../../assets/global/plugins/jquery.cokie.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/bootstrap-toastr/toastr.min.js"></script>
 <!-- END CORE PLUGINS -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
@@ -77,7 +79,7 @@
 <script src="../../assets/global/scripts/usersFactory.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/usersControllers.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/houseController.js" type="text/javascript"></script>
-
+<script src="../../assets/global/scripts/loginController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/vehiculeController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/officerController.js" type="text/javascript"></script>
 <script src="../../assets/global/scripts/accessController.js" type="text/javascript"></script>
