--- a/frontend/templates/Officers/access_door.html
+++ b/frontend/templates/Officers/access_door.html
@@ -1,21 +1,94 @@
-<form ng-submit="submitAccess(accessForm)" role="form" ng-init="accessForm = {}" name="access">
+<head>
+    <link href="../../assets/global/css/components-md.css" id="style_components" rel="stylesheet" type="text/css" />
+</head>
+<div class="access-back ">
+    <div class="opacity col-lg-12 col-md-12 col-sm-12">
 
-</form>
-<div class="gray-background">
-    <div class="gray-background col-lg-10 col-lg-offset-1 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-        <div class="form-group col-lg-6 col-md-6 col-sm-6 col-xs-6 no-padding no-margin">
-            <div class="input-group">
-                <span class="input-group-addon ">
-                      <i class="fa fa-user"></i>
-                      </span>
-                <input type="email" class="form-control" placeholder="Email Address">
+        <form ng-submit="submitAccess(accessForm)" role="form" ng-init="accessForm = {}" name="access">
+
+        </form>
+        <div class="height-6-percent col-md-12 hidden-xs"></div>
+
+        <div class="access-container col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-12 ">
+            <div class="col-md-6 col-sm-6 no-padding " id="access-door-container">
+                <div class="portlet light bordered access-search-container col-md-12  col-sm-12 col-xs-12 ">
+                    <h1 id="access_tittle" class="page-title small-margin-top text-center col-md-12"> Puerta de acceso </h1>
+                    <div class="height-5-percent col-md-12 hidden-xs"></div>
+
+                    <div class="form-group no-padding col-md-offset-2  col-md-8 col-sm-12">
+                        <div class="input-group">
+                            <span class="input-group-addon ">
+                                  <i class="fa fa-user"></i>
+                                  </span>
+                            <input type="text" class="form-control height-12-percent font-20 input_id" ng-change="getResident()" ng-model="id_number" placeholder="Cédula">
+                        </div>
+                    </div>
+
+                    <div class="height-10-percent col-md-12 col-sm-12 hidden-xs"></div>
+
+                    <div class="form-group no-padding col-md-offset-2 col-md-8">
+                        <div class="input-group">
+                            <span class="input-group-addon ">
+                                <i class="fa fa-car"></i>
+                                </span>
+                            <input type="text" class="form-control height-12-percent font-20 input_id " ng-change="getVehicule()" ng-model="id_vehicule" placeholder="Número de placa">
+                        </div>
+                    </div>
+                    <div class="height-6-percent col-md-12 col-sm-12 hidden-xs "></div>
+                    <button type="submit" class="btn blue font-15 col-md-offset-2 col-md-8  col-sm-12 col-xs-12 btn-access-door" ng-click="insertVisitor()" name="button">Registrar visitante</button>
+
+                </div>
+
+                <button type="submit" class="btn green font-15  col-md-12 col-sm-12 col-xs-12 btn-access-door" name="buton">Registrar cambio de turno</button>
+
             </div>
-            <div class="input-group">
-                <span class="input-group-addon ">
-                      <i class="fa fa-car"></i>
-                      </span>
-                <input type="email" class="form-control" placeholder="Placa">
+            <div class="access-result-search-container col-md-6 col-sm-6 col-xs-12 ">
+
+                <div class="portlet light bordered access-information-result-container col-md-12 col-sm-12">
+
+                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==2">
+
+                        <div id="error-image" class="result-image"></div>
+
+                        <div class="height-5-percent col-md-12 col-sm-12 hidden-xs "></div>
+                        <p class="red text-center font-30 col-md-12  col-sm-12  col-xs-12">No se encontran datos registrados</p>
+                    </div>
+
+
+                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==3">
+                        <h1 class="page-title green-font bold text-center font-30 " id="access_tittle">Vehículo registrado</h1>
+                        <div class="col-md-12 col-sm-12 ">
+                            <div id="success-car-image" class="result-image"></div>
+                        </div>
+                        <div class="height-7-percent col-md-6 col-sm-12 hidden-xs "></div>
+                        <span class="access_car_information gray-font font-20 col-md-12 col-sm-12 col-xs-12 no-padding">Num de placa: <span class="bold font-30">{{license_plate}}</span></span>
+                        <div class="col-md-7 col-sm-12 no-padding">
+                            <span class="access_car_information gray-font font-20 col-md-12 col-sm-12 col-xs-12 no-padding">Marca: {{SelectedBrand}}</span>
+                            <span class="access_car_information font-20 gray-font col-md-12 col-sm-12 no-padding">Casa: <span class="font-35 bold" id="house_number_span">{{SelectedHouse}}</span></span>
+                        </div>
+                        <div class="col-md-5 col-sm-12  col-xs-12 no-padding">
+                            <span class="access_car_information gray-font font-20 col-md-6 col-sm-7  col-xs-8 no-padding">Color:</span>
+                            <div class="col-lg-6 col-md-6 col-sm-4 col-xs-3 height-21-percent gray  img-circle" id="color-circle"> </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-12 col-sm-12 col-xs-12" ng-show="show==1">
+                        <h1 class="page-title green-font bold text-center font-30 " id="access_tittle">Residente registrado</h1>
+                        <div class="center no-padding success-resident-image">
+                            <img src="http://www.qtem.org/files/attach/images/contact/5438/BVP%20profile%20sq%202.jpg" alt="" class="img-responsive img-rounded" />
+                        </div>
+                        <div class="height-5-percent col-md-12 col-sm-12 hidden-xs "></div>
+                        <span class=" gray-font font-20 access_car_information col-md-12 col-sm-12 no-padding ">Nombre: Diego Barillas Valverde</span>
+                        <span class=" gray-font font-20 access_car_information col-md-8 col-sm-12 no-padding ">Cédula:<span class="font-35 bold "> 116140419</span></span>
+                        <span class="font-20 gray-font col-md-4 no-padding ">Casa: <span class="font-35 bold ">103</span></span>
+
+                    </div>
+
+                </div>
             </div>
+            <div class="height-5-percent col-md-12 col-sm-12 hidden-xs "></div>
         </div>
     </div>
+
 </div>
