--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -23,81 +23,84 @@
 
 	<link href="../../assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/css/plugins.css" rel="stylesheet" type="text/css" />
-	<link href="../../assets/global/css/main.css" rel="stylesheet" type="text/css" />
-	<link href="../../assets/admin/layout/css/layout.css" rel="stylesheet" type="text/css" />
-	<link id="style_color" href="../../assets/admin/layout/css/themes/darkblue.css" rel="stylesheet" type="text/css" />
-	<link href="../../assets/admin/layout/css/custom.css" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" type="text/css" href="../../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" />
-	<link rel="stylesheet" type="text/css" href="../../assets/global/plugins/bootstrap-timepicker/css/bootstrap-timepicker.min.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.3.4/css/fileinput.css" />
+	<link href="../../assets/global/css/main.css" rel=" stylesheet " type="text/css " />
+	<link href="../../assets/global/css/media-main.css" media="screen" rel=" stylesheet " type="text/css " />
+	<link href="../../assets/admin/layout/css/layout.css " rel="stylesheet " type="text/css " />
+	<link id="style_color " href="../../assets/admin/layout/css/themes/darkblue.css " rel="stylesheet " type="text/css " />
+	<link href="../../assets/admin/layout/css/custom.css " rel="stylesheet " type="text/css " />
+	<link rel="stylesheet " type="text/css " href="../../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css " />
+	<link rel="stylesheet " type="text/css " href="../../assets/global/plugins/bootstrap-timepicker/css/bootstrap-timepicker.min.css " />
+	<link rel="stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/4.3.4/css/fileinput.css " />
 	<!-- END THEME STYLES -->
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="shortcut icon " href="favicon.ico " />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons " rel="stylesheet ">
 </head>
-<div ui-view="login"></div>
-<div ui-view="access"></div>
-<div class="gray">
-	<div id="rightView" ng-hide="$state.current.name == 'login' || $state.current.name == 'access' ">
-		<div ui-view="header" class="page-header-fixed page-quick-sidebar-over-content">
+<div ui-view="login "></div>
+<div ui-view="access "></div>
+<div class="gray ">
+	<div id="rightView " ng-hide="$state.current.name=='login' || $state.current.name=='access' ">
+		<div ui-view="header " class="page-header-fixed page-quick-sidebar-over-content ">
 		</div>
-		<div class="page-container">586+9
-			<div ui-view="menu">
+		<div class="page-container ">
+			<div ui-view="menu ">
 			</div>
-			<div class="page-content-wrapper">
-				<div class="page-content">
-					<div ui-view="body">
+			<div class="page-content-wrapper ">
+				<div class="page-content ">
+					<div ui-view="body ">
 					</div>
 				</div>
 			</div>
 		</div>
-		<div ui-view="footer">
+		<div ui-view="footer ">
 		</div>
 	</div>
 
 </div>
-<script src="../../assets/global/plugins/jquery.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/jquery-migrate.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/jquery.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/jquery-migrate.min.js " type="text/javascript "></script>
 <!-- IMPORTANT! Load jquery-ui.min.js before bootstrap.min.js to fix bootstrap tooltip conflict with jquery ui tooltip -->
-<script src="../../assets/global/plugins/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/jquery.blockui.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/jquery.cokie.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
+<script src="../../assets/global/plugins/jquery-ui/jquery-ui.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/bootstrap/js/bootstrap.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/bootstrap-hover-dropdown/bootstrap-hover-dropdown.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/jquery-slimscroll/jquery.slimscroll.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/jquery.blockui.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/jquery.cokie.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/uniform/jquery.uniform.min.js " type="text/javascript "></script>
+<script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js " type="text/javascript "></script>
 <!-- END CORE PLUGINS -->
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
-<script src="../../assets/global/scripts/metronic.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/popUp.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/app.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/companiesFactory.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/residentController.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/usersFactory.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/usersControllers.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/houseController.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js "></script>
+<script src="../../assets/global/scripts/metronic.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/popUp.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/app.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/companiesFactory.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/residentController.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/usersFactory.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/usersControllers.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/houseController.js " type="text/javascript "></script>
 
-<script src="../../assets/global/scripts/vehiculeController.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/officerController.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/accessController.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/bootbox.min.js" type="text/javascript"></script>
+<script src="../../assets/global/scripts/vehiculeController.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/officerController.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/accessController.js " type="text/javascript "></script>
+<!-- <script src="../../assets/global/scripts/bootbox.min.js " type="text/javascript "></script> -->
 
-<!-- <script src="../../templates/admin/app.js" type="text/javascript"></script>
-<script src="../../templates/admin/residentController.js" type="text/javascript"></script> -->
-<script src="../../assets/admin/layout/scripts/layout.js" type="text/javascript"></script>
-<script src="../../assets/admin/layout/scripts/quick-sidebar.js" type="text/javascript"></script>
-<script src="../../assets/admin/layout/scripts/demo.js" type="text/javascript"></script>
-<script src="../../assets/admin/pages/scripts/components-pickers.js"></script>
-<script type="text/javascript" src="../../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
-<script type="text/javascript" src="../../assets/global/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js"></script>
-<script src="../../assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
-<script src="../../assets/global/scripts/bower_components/angular-resource/angular-resource.js"></script>
-<script src="../../assets/global/scripts/bower_components/angular-cookie/angular-cookie.js"></script>
-<script src="../../assets/global/scripts/bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
-<script src="../../assets/global/scripts/bower_components/angular-route/angular-route.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
-<script src="../../assets/global/scripts/bower_components/ng-token-auth/dist/ng-token-auth.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js "></script>
+
+<!-- <script src="../../templates/admin/app.js " type="text/javascript "></script>
+<script src="../../templates/admin/residentController.js " type="text/javascript "></script> -->
+<script src="../../assets/admin/layout/scripts/layout.js " type="text/javascript "></script>
+<script src="../../assets/admin/layout/scripts/quick-sidebar.js " type="text/javascript "></script>
+<script src="../../assets/admin/layout/scripts/demo.js " type="text/javascript "></script>
+<script src="../../assets/admin/pages/scripts/components-pickers.js "></script>
+<script type="text/javascript " src="../../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js "></script>
+<script type="text/javascript " src="../../assets/global/plugins/bootstrap-timepicker/js/bootstrap-timepicker.min.js "></script>
+<script src="../../assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js " type="text/javascript "></script>
+<script src="../../assets/global/scripts/bower_components/angular-resource/angular-resource.js "></script>
+<script src="../../assets/global/scripts/bower_components/angular-cookie/angular-cookie.js "></script>
+<script src="../../assets/global/scripts/bower_components/ng-token-auth/dist/ng-token-auth.js "></script>
+<script src="../../assets/global/scripts/bower_components/angular-route/angular-route.js "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js "></script>
+<script src="../../assets/global/scripts/bower_components/ng-token-auth/dist/ng-token-auth.js "></script>
 <!-- END JAVASCRIPTS -->
 
 <!-- END BODY -->
